fix on z-index map
change z-index

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ border-radius: 25px;
         width: 280px;
         height: 100vh;
         background-color: #15334b;
-        z-index: 80;
+        z-index: 110;
         transition: left 0.3s ease;
         padding-top: 70px;
     }
@@ -340,7 +340,7 @@ border-radius: 25px;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 75;
+    z-index: 105;
 }
 .sidebar-overlay.active {
     display: block;
